2011-05-04  Mark Pilgrim  <pilgrim@chromium.org>

Reviewed by Tony Chang.

        IndexedDB open (database) should fail if name is null
        https://bugs.webkit.org/show_bug.cgi?id=60022

        * storage/indexeddb/mozilla/open-database-null-name-expected.txt: Added.
        * storage/indexeddb/mozilla/open-database-null-name.html: Added.
2011-05-04  Mark Pilgrim  <pilgrim@chromium.org>

        Reviewed by Tony Chang.

        IndexedDB open (database) should fail if name is null
        https://bugs.webkit.org/show_bug.cgi?id=60022

        Test: storage/indexeddb/mozilla/open-database-null-name.html

        Combination problem: Bug in IDL didn't pass null values to .cpp layer,
        then .cpp layer didn't check for null value anyway.

        * storage/IDBFactory.cpp:
        (WebCore::IDBFactory::open): check for null name
        * storage/IDBFactory.idl: pass null name as null

Canonical link: https://commits.webkit.org/75455@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85770 268f45cc-cd09-0410-ab3c-d52691b4dbfc